# reservation-system

./: README.md  docker-compose.yml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: Button.jsx  Card.jsx  Field.jsx  Form.jsx  Layout.jsx  ProtectedRoute.jsx  ReservationForm.jsx  Table.jsx
frontend/src/pages/: Home.jsx  Locations.jsx  Login.jsx  NewReservation.jsx  NotFound.jsx  Profile.jsx  Register.jsx  Reservations.jsx  UpdateReservation.jsx
frontend/src/services/: locations.js  profile.js  reservations.js
frontend/src/styles/: Button.css  Card.css  Form.css  Home.css  Layout.css  Locations.css  Table.css  Theme.css
reservations/: .env.example  Dockerfile  api.http  pyproject.toml  schema.yml
reservations/reservations/: celery.py  settings.py  urls.py
reservations/reserve/: admin.py  apps.py  filters.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
reservations/reserve/management/: __init__.py
reservations/reserve/management/commands/: seed_locations.py
reservations/reserve/migrations/: 0001_initial.py  0002_alter_location_country.py  0002_initial.py  0003_reservation_num_people_alter_reservation_end_date_and_more.py
reservations/users/: models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
reservations/users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_remove_profile_country_code_and_more.py
