[project]
name = "reservations"
version = "0.1.0"
description = "A RESTful API for managing reservations of rooms, places, and buildings."
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "celery==5.5.3",
    "django==5.2.6",
    "django-cors-headers==4.9.0",
    "django-filter==25.1",
    "django-redis==6.0.0",
    "django-silk==5.4.3",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.28.0",
    "postgres==4.0",
    "psycopg2-binary==2.9.10",
    "python-decouple>=3.8",
    "redis[hiredis]==6.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reservations", "reservations.*", "users", "reserve"]